<resources>
    <string name="app_name">Multigame2020</string>
    <string name="display_players_title">Liste des joueurs</string>
    <string name="swipe_name">Swipe Game</string>
    <string name="fast_tap_name">Fast tap</string>
    <string name="start">Commencer !</string>
    <string name="score">Score : %d</string>
    <string name="tap">Tap</string>
    <string name="down">Bas</string>
    <string name="up">Haut</string>
    <string name="left">Gauche</string>
    <string name="right">Droite</string>
    <string name="swipe_left">Tap</string>
    <string name="swipe_right">Tap</string>
    <string name="tap_long">Tap long</string>
    <string name="remaining_time">Temps restant : %d secondes</string>
    <string name="finish_score">Votre score est de</string>
    <string name="menu">Menu</string>
    <string name="exit">Quitter</string>
</resources>
