<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="#FFF"
    android:id="@+id/tap_main_detection">

    <TextView

        android:id="@+id/tap_main_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/remaining_time"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tap_main_action"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:padding="20dp"
        android:text="@string/tap"/>

    <TextView
        android:id="@+id/tap_main_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="20dp"
        android:text="@string/score"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"/>


</RelativeLayout>